2009-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/ispell.el (ispell-command-loop): Improve last fix, using
	the new read-key function.

2009-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* term/x-win.el (x-menu-bar-open): Only call accelerate-menu if it
	is defined (Bug#4405).

2009-09-13  Vincent Belaïche  <vincent.belaiche@gmail.com>

	* recentf.el (recentf-cleanup): Use a hash table to find
	duplicates (Bug#4407).

2009-09-13  Per Starbäck  <per@starback.se>  (tiny change)

	* textmodes/ispell.el (ispell-command-loop): Convert keys such as
	kp-0 to ascii equivalents (Bug#4325).

2009-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cperl-mode.el (cperl-init-faces): Revert last change.

	* eshell/em-hist.el:
	* eshell/em-dirs.el (eshell-complete-user-reference): Declare
	pcomplete functions and variables to avoid compiler warnings.

2009-09-13  Leo  <sdl.web@gmail.com>  (tiny change)

	* eshell/em-script.el (eshell-login-script, eshell-rc-script):
	* eshell/em-dirs.el (eshell-last-dir-ring-file-name):
	* eshell/em-alias.el (eshell-aliases-file):
	* eshell/em-hist.el (eshell-history-file-name): Use
	expand-file-name instead of concat to make file names (Bug#4308).

2009-09-13  Glenn Morris  <rgm@gnu.org>

	* ediff-merg.el (ediff-do-merge):
	* filesets.el (filesets-run-cmd):
	* emulation/ws-mode.el (ws-show-markers, ws-move-block, ws-delete-block)
	(ws-find-marker-0, ws-find-marker-1, ws-find-marker-2, ws-find-marker-3)
	(ws-find-marker-4, ws-find-marker-5, ws-find-marker-6, ws-find-marker-7)
	(ws-find-marker-8, ws-find-marker-9, ws-goto-block-begin)
	(ws-goto-block-end, ws-goto-last-cursorposition, ws-copy-block):
	Replace empty `let's with `progn'.

2009-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/sendmail.el (send-mail-function):
	* tooltip.el (tooltip-mode):
	* simple.el (transient-mark-mode):
	* rfn-eshadow.el (file-name-shadow-mode):
	* frame.el (blink-cursor-mode):
	* font-core.el (global-font-lock-mode):